# web-scraping-agents

./: README.md  agent_runner.py  pyproject.toml
.agents/agents/: dev_agent.json  orchestrator.json  qa_agent.json
.agents/context/: application_context.md
.agents/skills/: git_ops.md  python_senior_dev.md  qa_engineer.md
.agents/workflows/: feature_pipeline.json
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: config.yml  feature_request.md
.github/workflows/: ci.yml
docs/: technical_decisions.md
src/: __init__.py
src/web_scraping/: __init__.py  settings.py
src/web_scraping/adapters/: __init__.py
src/web_scraping/adapters/notifications/: email_notification_simulator.py
src/web_scraping/adapters/persistence/: in_memory_contract_repository.py
src/web_scraping/adapters/scrapers/: __init__.py  playwright_contract_scraper.py
src/web_scraping/application/dto/: contract_lookup_result.py  contract_query.py  notification_result.py
src/web_scraping/application/ports/: __init__.py  contract_repository.py  contract_scraper.py  notification_gateway.py
src/web_scraping/application/use_cases/: fetch_contract_use_case.py
src/web_scraping/domain/entities/: contract.py  contract_item.py
src/web_scraping/entrypoints/: __init__.py
src/web_scraping/entrypoints/api/: app.py  schemas.py
src/web_scraping/infrastructure/config/: __init__.py
src/web_scraping/infrastructure/entrypoints/: __init__.py
src/web_scraping/ports/: __init__.py
tests/: test_agent_runner.py  test_fetch_contract_use_case.py
(+7 files in other folders)
