[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "web-scraping-agents"
version = "0.1.0"
description = "Base hexagonal para scraping de contratos com FastAPI e Playwright."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1.0",
  "playwright>=1.52,<2.0",
  "pydantic>=2.11,<3.0",
  "pydantic-settings>=2.8,<3.0",
  "uvicorn>=0.34,<1.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
